# Klemmgine

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  CMakeSettings.json  Doxyfile  INSTALLATION.md  Klemmgine.cmake  Klemmgine.sln  LICENSE  README.md  engine.json  engine.kbld  make-release.ps1  setup-deps.ps1  setup.ps1  setup.sh
.github/workflows/: build.yml  msbuild.yml
CSharp/Core/: CoreNativeFunction.cs  Delegates.cs  Engine.cs  EngineLog.cs
CSharp/Engine/: CommonEngine.cs  Input.cs  KlemmgineCSharp.csproj  Log.cs  NativeFunction.cs  NativeObject.cs  SceneObject.cs  Vector.cs  WorldObject.cs
CSharpCore/: CSharpCore.csproj
CSharpCore/Engine/: CoreNativeFunction.cs  Delegates.cs  Engine.cs  EngineLog.cs
EditorContent/CodeTemplates/: Class.cpp  Class.cs  Class.h  ClassNamespace.cs
EditorContent/Config/: EditorPrefs.pref
EditorContent/Materials/: Arrows_Blue.jsmat  Arrows_Green.jsmat  Arrows_Red.jsmat  DynamicCollider.jsmat  EngineDefaultPhong.jsmat  Reflective.jsmat  StaticCollider.jsmat  WorldGrid.jsmat
EditorContent/Models/: Arrows.jsm  Arrows1.jsm  Sphere.jsm
EngineSource/: Engine.vcxproj
EngineSource/CSharp/: CSharpInterop.cpp  CSharpInterop.h  CSharpUICanvas.cpp  CSharpUICanvas.h  NativeFunctions.cpp  NativeFunctions.h
EngineSource/Engine/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  BackgroundTask.cpp  BackgroundTask.h  Console.cpp  Console.h  Engine.h  EngineError.cpp  EngineError.h  EngineProperties.h  EngineRandom.cpp  EngineRandom.h  FileUtility.cpp  FileUtility.h  Gamepad.cpp  Gamepad.h  Input.cpp  Input.h  LaunchArgs.cpp  LaunchArgs.h  Log.cpp  Log.h  OS.cpp  OS.h  Save.cpp  Save.h  Scene.cpp  Scene.h  Script.cpp  Script.h  Stats.cpp  Stats.h  StrLocale.cpp  StrLocale.h  Timer.cpp  Timer.h  TypeEnum.cpp  TypeEnun.h
EngineSource/Math/: Math.cpp  Math.h  Vector.cpp  Vector.h
EngineSource/Networking/: Client.cpp  Client.h  NetworkEvent.cpp  NetworkEvent.h  Networking.cpp  Networking.h  NetworkingInternal.h  Packet.cpp  Packet.h  Server.cpp  Server.h
EngineSource/Objects/: CSharpObject.cpp  CSharpObject.h  InstancedMeshObject.cpp  InstancedMeshObject.h  LightObject.cpp  LightObject.h  MeshObject.cpp  MeshObject.h  ParticleObject.cpp  ParticleObject.h  SceneObject.cpp  SceneObject.h  SoundObject.cpp  SoundObject.h  WorldObject.cpp  WorldObject.h
EngineSource/Rendering/: BillboardSprite.cpp  BillboardSprite.h  Drawable.cpp  Drawable.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  Particle.cpp  Particle.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderManager.cpp  (+5 more)
Tools/BuildTool/: BuildTool.vcxproj  CMakeLists.txt
Tools/BuildTool/Code/: BuildTool.cpp  Log.cpp  Log.h  ParseFile.cpp  ParseFile.h
Tools/ProjectGenerator/: CMakeLists.txt  ProjectGenerator.vcxproj
Tools/ProjectGenerator/BuildFiles/: ProjectCMakeLists.txt  makefile.kbld
Tools/ProjectGenerator/CMake/: ProjectCMakeLists.txt
Tools/ProjectGenerator/Code/: CMakeGenerator.cpp  CMakeGenerator.h  EngineGeneration.cpp  EngineGeneration.h  Exception.cpp  Exception.h  Log.cpp  ProjectGenerator.cpp  SLNGenerator.cpp  SLNGenerator.h  Util.cpp  Util.h  main.cpp
Tools/ProjectGenerator/Code/MSVC/: SLN.cpp  SLN.h  VSProj.cpp  VSProj.h
Tools/ProjectGenerator/Code/XML/: XML.cpp  XML.h
Tools/ProjectGenerator/DefaultProjectFiles/: .gitignore
Tools/ProjectGenerator/DefaultProjectFiles/Code/: Project.cpp
Tools/ProjectGenerator/DefaultProjectFiles/Code/Default/: Objects.cpp  main.cpp
Tools/ProjectGenerator/DefaultProjectFiles/EditorContent/Materials/: Arrows_Green.jsmat  Arrows_Red.jsmat  EngineDefaultPhong.jsmat  Reflective.jsmat
Tools/ProjectGenerator/DefaultProjectFiles/EditorContent/Models/: Arrows.jsm
Tools/ProjectGenerator/DefaultProjectFiles/Scripts/: CSharpAssembly.csproj
Tools/ProjectGenerator/DefaultProjectFiles/Scripts/Engine/: CameraShake.cs  CommonEngine.cs  Input.cs  Log.cs  NativeFunction.cs  Scene.cs  Sound.cs  Stats.cs  Vector.cs  WorldObject.cs
Tools/ProjectGenerator/DefaultProjectFiles/Scripts/Engine/Compoents/: CameraComponent.cs  MoveComponent.cs  ObjectComponent.cs  ParticleComponent.cs
Tools/ProjectGenerator/DefaultProjectFiles/Scripts/Engine/UI/: UITypes.cs
Tools/ProjectGenerator/DefaultProjectFiles/Shaders/: Shaders.vcxproj  basic.frag  basic.vert  bloom.frag  postprocess.frag  postprocess.vert  shadow.frag  shadow.vert  shared.frag  shared.vert  skybox.frag  skybox.vert  ssao.frag  tree.frag  tree.vert  uishader.vert  vertex-lighting.frag  vertex-lighting.vert
Tools/ProjectGenerator/DefaultProjectFiles/Shaders/Editor/: color_picker.frag
Tools/ProjectGenerator/DefaultProjectFiles/Shaders/Internal/: billboard.vert  postprocess.frag  postprocess.vert  shadow.frag  uimerge.frag
Tools/ProjectGenerator/DefaultProjectFiles/Shaders/UI/: text.frag  text.vert  uishader.frag
Tools/ProjectGenerator/DefaultProjectFiles/Shaders/sky/: clouds.frag
Tools/ProjectGenerator/LinuxFiles/: Editor.sh  makefile.kbld
Tools/ProjectGenerator/ProjectFiles/Code/Default/: Objects.cpp
Tools/ProjectGenerator/ProjectFiles/Scripts/Engine/: CommonEngine.cs  Input.cs  Log.cs  NativeFunction.cs  WorldObject.cs
Tools/ProjectGenerator/ProjectFiles/Scripts/Engine/Compoents/: CameraComponent.cs  CollisionComponent.cs  MeshComponent.cs
Tools/ProjectGenerator/ProjectFiles/Scripts/Engine/UI/: UITypes.cs
Tools/ProjectGenerator/ProjectFiles/Shaders/: basic.vert  shared.frag  skybox.frag
Tools/ProjectGenerator/ProjectFiles/Shaders/Editor/: color_picker.frag  grid.frag
Tools/ProjectGenerator/ProjectFiles/Shaders/Internal/: billboard.frag  bloom.frag  cull.frag  cull.vert  fxaa.frag  postprocess.frag  shadow.geom  uimerge.frag
Tools/ProjectGenerator/ProjectFiles/Shaders/UI/: uishader.frag  uishader.vert
Tools/ProjectGenerator/ProjectFilesNoSource/: Editor.bat
Tools/ProjectGenerator/ProjectFilesNoSource/Code/: Project.cpp
Tools/ProjectGenerator/ProjectFilesNoSource/Scripts/: Project.cs
Tools/ProjectGenerator/Templates/: CMakeLists.txt  sln  vcxproj
Tools/ProjectGenerator/WindowsFiles/: Editor.bat  FindObjects.bat
(+255 files in other folders)
